# ChangeLog for sci-mathematics/maxima
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/maxima/ChangeLog,v 1.112 2014/08/28 16:14:08 grozin Exp $

*maxima-5.34.0 (28 Aug 2014)

  28 Aug 2014; Andrey Grozin <grozin@gentoo.org> +maxima-5.34.0.ebuild:
  Version bump

  03 Aug 2014; Andrey Grozin <grozin@gentoo.org> maxima-5.33.0.ebuild:
  Default lisp on arm is now gcl

*maxima-5.33.0 (06 Apr 2014)

  06 Apr 2014; Andrey Grozin <grozin@gentoo.org> -maxima-5.32.1.ebuild,
  +maxima-5.33.0.ebuild:
  Version bump

*maxima-5.32.1-r1 (29 Jan 2014)

  29 Jan 2014; Andrey Grozin <grozin@gentoo.org> +maxima-5.32.1-r1.ebuild,
  +files/ecls-1.patch:
  Fix the library version of the ecls maxima needed by sage (bug #499634),
  thanks to Martin von Gagern <Martin.vGagern@gmx.net>

*maxima-5.32.1 (11 Jan 2014)

  11 Jan 2014; Andrey Grozin <grozin@gentoo.org> +maxima-5.32.1.ebuild:
  Version bump

*maxima-5.31.2 (14 Oct 2013)

  14 Oct 2013; Andrey Grozin <grozin@gentoo.org> +maxima-5.31.2.ebuild:
  Version bump

*maxima-5.30.0-r2 (01 Jul 2013)

  01 Jul 2013; Andrey Grozin <grozin@gentoo.org> -maxima-5.30.0-r1.ebuild,
  +maxima-5.30.0-r2.ebuild, -files/texinfo51.patch:
  Fixed #473102 - depend on <texinfo-5.0 again

*maxima-5.30.0-r1 (05 Jun 2013)

  05 Jun 2013; Andrey Grozin <grozin@gentoo.org> -maxima-5.30.0.ebuild,
  +maxima-5.30.0-r1.ebuild, +files/texinfo51.patch:
  Improvements from the sage-on-maxima overlay: texinfo-5.x is OK, ecls library
  is built and installed

  25 Apr 2013; Andrey Grozin <grozin@gentoo.org> maxima-5.30.0.ebuild:
  DEPEND on <texinfo-5.0 (bug #466730)

*maxima-5.30.0 (20 Apr 2013)

  20 Apr 2013; Andrey Grozin <grozin@gentoo.org> +maxima-5.30.0.ebuild,
  +files/clisp-0.patch, +files/clozurecl-0.patch, +files/cmucl-0.patch,
  +files/ecls-0.patch, +files/imaxima-0.patch, +files/rmaxima-0.patch,
  +files/sbcl-0.patch, +files/wish-0.patch, +files/xdg-utils-0.patch:
  Version bump
