@@ -40,6 +40,7 @@ DIST maxima-5.31.2.tar.gz 27453084 SHA256 288dbd7707451a04b68859b38febc1c5307033
 DIST maxima-5.32.1.tar.gz 28650767 SHA256 fc11b2d2b9eee3471f5b618ae87140d8b269d7715ac9258a2efc4d2683823d4f SHA512 a9af138f1af95a6935173c23fc0caeddee83f6459b3fb075e90a8168265fd4b91ba5a0888aa81eaa44a0eef067e79d6056cef2800431c03738c8d3f76073dbb0 WHIRLPOOL c3c1dede7d73439ef9c3475e57015dcc07255a1c9ddd625cdaa8ea134e4733e42b14969f4649a69d702d6457b58be53c367f2772b963b987a1f64e518e61ff43
 DIST maxima-5.33.0.tar.gz 28756677 SHA256 e2af6c85f782de95933ee77f47440976be78628b0d83557a76c301de43a85d8d SHA512 99d482cbd68b1bce6d61f28a277962944197e3350b92de58462c1a5d7df94f73cbaaf9af47ad4d51692499f1061c7c6e98dfd83e58fc58d3c7112855cb9093ec WHIRLPOOL 9ceae1a910ac007a81e8f9beeabd12de10cc48e7fc8755b03c94dd1ed85b4ff3f3c49bede1a78903d7855c1e6ec54a580dadb56d48dbdd3fe1c96d66b7f64c3e
 DIST maxima-5.34.0.tar.gz 29230417 SHA256 a9a613a225deefa47cebdeff2ca212191e11ab449d0d17cd64aebf4b4f096052 SHA512 9b768f5812f5aa8ea0b21d3c98216e99ec4936735da8ba283af90906bb37ef8935d277706dfde03c05034c1a0d0c3922b8252b2428e7d0e30d580432a141540b WHIRLPOOL d5b86e5a4fb343fff6debb4d7a26862db62b3133d36b159a2b1a21ed8c5a586d85978e7c762cb7cbd27b34b566ba5c6b296433d448e697f25583c5f8cee32c3f
+DIST maxima-5.34.1.tar.gz 29469851 SHA256 20ca416ca912c8d3d99299f2ef45342a1beb2f077cf501c6a647de46bfdb89b7 SHA512 24a9ce0d2bfb0fa107460bbeec561869f9d3f2ce2623e39ab16b810dbf2712981bbf98ceee9c30f4e70fdec7f918a7743b5fb8cf26b67313e1d367dd8f2a1823 WHIRLPOOL 0f59cfe14391686a543027bb5cab8669439d0e36b016924872662f61e36cf05663480f8a3f942d7deccbe39ec7f45ed77deeb8a3c84241189ac0f1993537c47a
 EBUILD maxima-5.18.1.ebuild 4197 SHA256 8a94a0d0b12ba9e2e99968e9dff248b8d18403b2eddbcab6305805e1e211b662 SHA512 eeea8f30bf5c1c467df82823fdd0c467926648d2a598819c8aca32e56c7969303f465458fa0d42d4c26fd2684068f59048ec049a56e26d1b932e56e32aae02d0 WHIRLPOOL 8900e30c855159771d13d25566c4d06b62f9cbcf10ccd18b0bc20e7558147233c8d49d3d99c5d2bf3d2ac1577fac99c9071188ec2d4ee85cc3c155c6897cf852
 EBUILD maxima-5.26.0.ebuild 5129 SHA256 8130e9712676683448c77b90ff1fc4cad86825c34a1b2248ae083e706e6c6195 SHA512 ca5d2b94ad655f1e1c0d71e7c539d3ec066c962d8db3df3cafdc0ad9661c6615bc4c883d28a99df092b1acc279dd3291e4a4d44faf48ae218e28d9139e799bb5 WHIRLPOOL 729d6faf262496d3767cff8f81ad83af9fe7355cd52a2fe504e43860c2a3eaf90b018e3e2d9755583039f4c7ea0f038d1826e52ac138dda9260dd36db35e1e3e
 EBUILD maxima-5.27.0-r1.ebuild 5129 SHA256 fe5955c77a5847ca43eae978462f6b74d3c29b898c9ebee84b977edaffc8142f SHA512 fb992509f3296a5d19cbd04201b010cbeb5ccaab930f0f3803d28544fab590b3340eed77cbe34d8575c02d976a52ef3bcbdc15b958c165efc160a06bf85fff14 WHIRLPOOL 1c47a6275faa0ee3178fe6f828accf3a207455091148d23bcfd8326b2279d1a81b3fe8b9fae30ae9d23441d8e9583a1d3047ac4722f909f365469ece7e5022f7
@@ -50,24 +51,25 @@ EBUILD maxima-5.31.2.ebuild 4777 SHA256 464ae4fd4a379fc7e2fad06b4aef86758780314b
 EBUILD maxima-5.32.1-r1.ebuild 4459 SHA256 49b037bce1373efdb1364340f86465529f1199ef3505f6dc4210a58cb5ffdc1c SHA512 806cd3f28a188a992784c74d040f69978014a57ede648b90aeb422008ec0bfe7710c9f24b9098fa5d24be73d5885c5b791e6227d467683c3ae39e60a7af7d3a9 WHIRLPOOL 34e972cf06678820dbe65a1c1528314f8804f40484fa1db9e8b902aa76c4af6eb789ee145084c0b0087a832d3cff076e84bef960cb425a9aff85e632f1e3ff13
 EBUILD maxima-5.33.0.ebuild 4533 SHA256 ba8258938d8639a0ca9a1644cd1207d1f6ba5a4a17710db015ec5884ed7a8acd SHA512 82f56010a3e9bd1ea0cc5411b493c8605d446126b2c5b6787053160adce0e3c890c940f2011c5c312fce755ec3593f72f5e75efb6b05f412ae95bfdc578dfb79 WHIRLPOOL 7b7aa9c2da2a02f348c32747da4d95057563e9a7e12bfc698af6373c2574f4a69a86d5b85865382c4ff7075ad29a70d8ce7e1bafaf772709e871bd428701e9cd
 EBUILD maxima-5.34.0.ebuild 4533 SHA256 9268e394f55dffbecaa484dc0eb27d0a1826228cd47f31322a11a1accdbca926 SHA512 4f745650413097213b2ace3182227870f6b3cfc169ea4a02212f8850ba32ed78262710913bc0688beccf7e8ac00dc14ca3049b801579b19249ce03615052b8f3 WHIRLPOOL f28c1d54344b92c12b99599c0d724c713e0ae9e43dd89ad4dd407c4d2fcf07d33cb630fd0f70a65e0423d16103fdeeca199632914a8b80c2e5a67c1cbd19dfc2
-MISC ChangeLog 25139 SHA256 c3b6ee24e7f486dc8da80f6e982ecd9c49b20a2d5d6e47ad847c835e75d82877 SHA512 e24d6a6ce54f56e6a09c5ba33e4295df74f3b2e55820348018eb8b880fd8f7e693b8d6f7ea8955b1ed19fd08711bb9b86fb7f8cf3cf1114ae0aa5e9fe86e8947 WHIRLPOOL c78b2cfc27026d959a388c0f6d94cb946238a24e3ac01b78d3f84b016e4cec247e01bbe7119a9745809e03f491d09f6736c0a1e630349505f2bac3c2504d986d
+EBUILD maxima-5.34.1.ebuild 4378 SHA256 d1f84e00402c787dab1cbcfb8b54108ae2516f2adb0cbe345f2378c5bec397f0 SHA512 2a5f1003ea3692edbad35ffccc3cc3fd439cb2f2b653e672909453c1a05630da2b83f747461a5ca79374254f97183e9f632ca726d8a48449477c306530704ece WHIRLPOOL 0159f0237e73e6ac04a13a28bc73efb3ecd97cac55eed0d3c554b7fbc75c0a5c9be9d6f010ec3c98a6108ed84c75232d3ecd6c2c2a0d23551de7a870f9ad8453
+MISC ChangeLog 25302 SHA256 a947f2b7940a81110599032fe58d53e8c893ae3c1e7fdaccb1eacaef53abe4d9 SHA512 9b85762baf40a1811909b72ed85e1af5f7af1a14bbc9299ea80692ac9331b78e11300d76a05381e4e9639ba0eba2a672f1259e032ee46261c7151ce15e0f49ed WHIRLPOOL 6ee4026f8b2b7be286727cea6ecebab8b0f35aabc92daa41a20a8e1b6388d7cbb22f5b39e6faeb4a0b2f6d2a8eb6b7ad8dd119607ef3a359b1eed8d998b2fabc
 MISC metadata.xml 1316 SHA256 c5b7768087c365de73e5fe1458c72155134c0db19d6d9e22527e7dc0c5f99f50 SHA512 b7a7af7e6342b140b1d2a09ecb3a4a59107fe23bf0bfb63ca8c344e5960d7f3ac64e0b19f516333e34ab878e82fef58bdb447c0110058b09aa66870ba2f836a7 WHIRLPOOL 3cae3e8642d61d403bc5f82d5471c3b4d48670bcabec9af35309f95dfe4bba7306581d7e8f38f4dd7c45da9d56d0eec92fc71a7a7cff778ea78673fe5b857385
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJ8BAEBCABmBQJT/1VfXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJUFWY9XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQwOEM0RURGNjY5QzVBNjMwRkU3REVCOTQz
-QUZGQ0U5NzREMzRCRDhDAAoJEDr/zpdNNL2M7GcQAI67RCjwG/BDelpIrP0ynW1O
-dUAsQH1ImzOsF87l8DNISpB6YJiK0WlyQPB4EkNbdQBiXSdywxtvH22b03mEmtIu
-WGlnY/nVh0PIdEWatBTXELbBk29WHPiCyBbUWwUGOLp5FPAQo4w3TnfCE4cKthnS
-jTTMY9UHxTdl2KuF+Qyh/Lh8siE22QpOrgYAY0KHVPyPA3Yj7FfirBSNs4brctk4
-iRjGIRzSHVFVDiktm6P70Q487hT1FjcpDpfSrdHqlZFY4dsiGPG1mwT711CA7J+k
-V9XbBqVssdYOXjkjhQLeUyJJii7M1HRDKdZRRVqVp4AjuNZe94JjaROOq0JkpMwW
-WYKka84OHc7OAn+s7w8R8uP80lFZKkRQV6qgtUR6Blow9iIHDPho6ndFWHaUi5s9
-KHbl17R37CuDvYw+3sRyTkyp1/Q0sjQGslGIHWu9fl/SrWIv8IrgBmdcK1NTebPc
-3jk1fAMsM3PfAb8pKHqL/g5f+O0lL2vsIdfcQIL7Vcq/ZyD/IJpnK8hGtYmbBf6F
-1G60H745yNzePhctlWPPQqcwVc/Kg4Jt+4gw9MKRX6HXpxwyJ3CIGhI3aa99xjwv
-se3HL01VKBbMNg26gNUfXiQVhIH+eICVb6h6l8bFXB4EO/VDQY/zHFDUgRZS/0LZ
-Mw1uYAbeB6pOCaBqFpQk
-=fwvV
+QUZGQ0U5NzREMzRCRDhDAAoJEDr/zpdNNL2MusMQAKVHpGD3rCT4i5rvPHxHXSPh
+5DTGvA+Hz76imYCPLIOtQWQoKjg3CsLJCbowcfMjHYu0CK5JoYyo/GHzyFUaQUU+
+tffdrJGQ55lS71S0+uH/bLG495FltafncJjSgjmglCQSylJr4SJ0SgJme9I3Cg0Q
+4xgcHfjdEpfASt6fsITMl7eNRat810lLWTV2KEv0MhaSMsbXpVolb5k2RjOVqp/x
+PRGidK+mA7K1EiJDSTEjngZXoDiRsaTkLL7u7Bmm9uOBMf+sli9HD9/daZbuIlLI
+5Shnmmsndpwab+QydLwapD0Dfs/8vaVQYa8LTIRdzRHWvbwwBJk4dHV+kP1JbD89
+Qi9GqNlahNyrTA1tZQluTwTeF7orU3/dUzPYTP8ARLEtBl4kAKZpKWR83xLTLsHo
+ivgtThAFaEKMbZ5FzRYR5Kal+HWJfZOtfTKjVbGOKicYB5v/90nNJ/xQ29gI1SPg
+zoUSj8sOlvCyCVbzcJbL30U5Dy++3Cv6o5LBIHoqQVLdJTzJSa9knxQFj3GNPQz8
++lcqixKMpdq2n51pAMZBFKy9PUynRz3l/d0nYB2TBA3nxQxGsgM385miJDKz23/X
+Yrl6egVQyXMHh7y14HB0REDPYkWseiOuO2DtCd5CYrNl/ewRsaMctn3HRmJyi198
+RWdiuHNBUPC4cFhbjtIE
+=czeM
 -----END PGP SIGNATURE-----
